# fossil-data

./: README.md  meson.build
.github/workflows/: meson_ci.yml
code/logic/: meson.build  ml.c  plot.c  prob.c  series.c  tensor.c  transform.c
code/logic/fossil/data/: framework.h  ml.h  plot.h  prob.h  series.h  tensor.h  transform.h
code/tests/: meson.build
code/tests/cases/: test_ml.c  test_ml.cpp  test_plot.c  test_plot.cpp  test_prob.c  test_prob.cpp  test_series.c  test_series.cpp  test_tensor.c  test_tensor.cpp  test_transform.c  test_transform.cpp
